--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (12.1.1-6) unstable; urgency=low
+
+  * Bug #47222: load ucr lazily, add property for ucsschool/username/max_length
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 06 May 2019 14:50:58 +0200
+
 ucs-school-lib (12.1.1-5) unstable; urgency=low
 
   * Bug #48141: log hook execution
