--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-50) unstable; urgency=low
+
+  * Bug #47222: test usernames longer than 20 characters
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 06 May 2019 14:50:15 +0200
+
 ucs-test-ucsschool (6.0.0-49) unstable; urgency=low
 
   * Bug #47222: revert code premitting usernames longer than 20 characters
