--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (9.0.0-8) unstable; urgency=low
+
+  * Bug #49423: log ou_create_post execution time
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 07 May 2019 11:47:53 +0200
+
 ucs-school-umc-exam (9.0.0-7) unstable; urgency=low
 
   * Bug #49227: Fix some typos
