--- a/ucs-school-umc-wizards/umc/js/de.po
+++ b/ucs-school-umc-wizards/umc/js/de.po
@@ -248,7 +248,7 @@ msgstr "Verwaltung von Schulen"
 #, javascript-format
 msgid ""
 "Microsoft Active Directory limits usernames to 20 characters. To prevent "
-"logon problems with exam user accounts, usernames should not be longer than "
+"logon problems with exam user accounts, usernames must not be longer than "
 "%s characters. Please choose a shorter username."
 msgstr ""
 "Microsoft Active Directory begrenzt Benutzernamen auf 20 Zeichen. Um "
