--- a/ucs-school-umc-distribution/debian/changelog
+++ b/ucs-school-umc-distribution/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-distribution (17.0.1-0) unstable; urgency=medium
+
+  * Bug #49333: Improve backup functionality and log missing disk space
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Thu, 09 May 2019 12:57:21 +0200
+
 ucs-school-umc-distribution (17.0.0-5) unstable; urgency=medium
 
   * Bug #47160: Remove separate confirmation dialog for empty projects
