--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-53) unstable; urgency=medium
+
+  * Bug #49434: adjust test cases
+
+ -- Florian Best <best@univention.de>  Fri, 10 May 2019 12:22:44 +0200
+
 ucs-test-ucsschool (6.0.0-52) unstable; urgency=low
 
   * Bug #48141: enable debug output
