--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.4-14) unstable; urgency=low
+
+  * Bug #49434: adjust test cases
+
+ -- Florian Best <best@univention.de>  Fri, 10 May 2019 12:22:44 +0200
+
 ucs-test-ucsschool (5.0.4-13) unstable; urgency=low
 
   * Bug #48924: add/update LDAP ACL test script for edu/adm slave
