--- a/ucs-school-umc-distribution/debian/changelog
+++ b/ucs-school-umc-distribution/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-distribution (17.0.1-1) unstable; urgency=medium
+
+  * Bug #49333: Fix error in num_results prop
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Fri, 10 May 2019 14:47:01 +0200
+
 ucs-school-umc-distribution (17.0.1-0) unstable; urgency=medium
 
   * Bug #49333: Improve backup functionality and log missing disk space
