--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-55) unstable; urgency=medium
+
+  * Bug #49333: fix distribution test cases
+
+ -- Florian Best <best@univention.de>  Mon, 13 May 2019 10:38:55 +0200
+
 ucs-test-ucsschool (6.0.0-54) unstable; urgency=low
 
   * Bug #48924: add/update LDAP ACL test script for edu/adm slave
