--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (17.0.6-15) unstable; urgency=low
+
+  * Bug #49217: move Python module required by client to common package
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 13 May 2019 18:15:33 +0200
+
 ucs-school-import (17.0.6-14) unstable; urgency=low
 
   * Bug #49423: unset DJANGO_SETTINGS_MODULE env before importing Django
