--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-56) unstable; urgency=low
+
+  * Bug #49462: use "dc$ou-01" when dc-name not set and not on singlemaster
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 13 May 2019 18:21:28 +0200
+
 ucs-test-ucsschool (6.0.0-55) unstable; urgency=medium
 
   * Bug #49333: fix distribution test cases
