--- a/ucs-school-umc-import/debian/changelog
+++ b/ucs-school-umc-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-import (2.0.0-1) unstable; urgency=low
+
+  * Bug #49217: depend on package containing constants.py
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 13 May 2019 21:36:49 +0200
+
 ucs-school-umc-import (2.0.0-0) unstable; urgency=low
 
   * bump version for UCS@school 4.4
