--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-metapackage (12.0.2-1) unstable; urgency=low
+
+  * Bug #49475: activate online repository in join hook and perform an
+    update to latest errata level
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 15 May 2019 11:55:26 +0200
+
 ucs-school-metapackage (12.0.1-1) unstable; urgency=medium
 
   * Bug #48469: Do not modify dhcpd/ldap/base in DEMOSCHOOL creation
