--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (6.0.0-57) unstable; urgency=low
+
+  * Bug #49462: use context manager
+  * Bug #49462: disable default hooks to speed up tests
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 15 May 2019 19:59:35 +0200
+
 ucs-test-ucsschool (6.0.0-56) unstable; urgency=low
 
   * Bug #49462: use "dc$ou-01" when dc-name not set and not on singlemaster
