--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (17.0.6-16) unstable; urgency=low
+
+  * Bug #49217: run update-python-modules before using manage.py
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 16 May 2019 08:52:23 +0200
+
 ucs-school-import (17.0.6-15) unstable; urgency=low
 
   * Bug #49217: move Python module required by client to common package
