--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (17.0.6-18) unstable; urgency=low
+
+  * Bug #49217: fix typo
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 20 May 2019 10:28:50 +0200
+
 ucs-school-import (17.0.6-17) unstable; urgency=low
 
   * Bug #49217: reload (instead of restart) services that support it
