--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (17.0.6-19) unstable; urgency=low
+
+  * Bug #49217: retry without update-python-modules
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 21 May 2019 14:46:20 +0200
+
 ucs-school-import (17.0.6-18) unstable; urgency=low
 
   * Bug #49217: fix typo
