--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (9.0.1-2) unstable; urgency=low
+
+  * Bug #49519: add 'query' UMC call to get all exams
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 21 May 2019 17:01:35 +0200
+
 ucs-school-umc-exam (9.0.1-1) unstable; urgency=low
 
   * Bug #49333: Improve logging for exam backup
