--- a/ucs-school-umc-distribution/debian/changelog
+++ b/ucs-school-umc-distribution/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-distribution (17.0.1-4) unstable; urgency=low
+
+  * Bug #49519: fix typo
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 21 May 2019 17:11:13 +0200
+
 ucs-school-umc-distribution (17.0.1-3) unstable; urgency=low
 
   * Bug #49519: add 'room' property to Project
