--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (9.0.1-3) unstable; urgency=low
+
+  * Bug #49519: support filtering and return startdate with day
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 22 May 2019 10:07:47 +0200
+
 ucs-school-umc-exam (9.0.1-2) unstable; urgency=low
 
   * Bug #49519: add 'query' UMC call to get all exams
