--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-exam (9.0.1-4) unstable; urgency=low
+
+  * Bug #49525: add 'groups2students' UMC call to get students in school
+    classes and workgroups
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 22 May 2019 11:51:24 +0200
+
 ucs-school-umc-exam (9.0.1-3) unstable; urgency=low
 
   * Bug #49519: support filtering and return startdate with day
