--- a/ucs-school-umc-users/debian/changelog
+++ b/ucs-school-umc-users/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-users (15.0.0-3) unstable; urgency=medium
+
+  * Bug #49492: Fix a typo that could cause the grid to malfunction
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Thu, 23 May 2019 08:24:54 +0100
+
 ucs-school-umc-users (15.0.0-2) unstable; urgency=medium
 
   * Bug #47646: use PasswordBox with reveal toggle for
