--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (9.0.1-6) unstable; urgency=low
+
+  * Bug #49525: fix docstring
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 24 May 2019 10:21:47 +0200
+
 ucs-school-umc-exam (9.0.1-5) unstable; urgency=low
 
   * Bug #49525: change result of groups2students()
