--- a/ucs-school-umc-lists/debian/changelog
+++ b/ucs-school-umc-lists/debian/changelog
@@ -1,6 +1,6 @@
-ucs-school-umc-lists (2.0.0-1) unstable; urgency=medium
+ucs-school-umc-lists (2.0.0-2) unstable; urgency=medium
 
-  * Bug #48504: Change csv separator according to the current umc language settings
+  * Bug #48504: Improve csv export compatibility by using UTF-16 and tabs
 
  -- Jürn Brodersen <brodersen@univention.de>  Fri, 17 May 2019 16:53:45 +0200
 
