--- a/ucs-school-umc-exam/umc/de.po
+++ b/ucs-school-umc-exam/umc/de.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ucs-school-umc-exam\n"
 "Report-Msgid-Bugs-To: packages@univention.de\n"
-"POT-Creation-Date: Mon, 08 Apr 2013 17:33:00 +0200\n"
+"POT-Creation-Date: Tue, 28 May 2019 15:45:28 +0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -12,8 +12,8 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-msgid "Start exam"
-msgstr "Klassenarbeit starten"
+msgid "Create and list school exams"
+msgstr "Klassenarbeiten anlegen und auflisten"
 
-msgid "Starts a new exam for a specified computer room"
-msgstr "Richtet eine neue Klassenarbeit für einen ausgewählten Computerraum ein."
+msgid "Exams"
+msgstr "Klassenarbeiten"
