--- a/ucs-school-umc-lists/debian/changelog
+++ b/ucs-school-umc-lists/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-lists (2.0.0-3) unstable; urgency=low
+
+  * Bug #48504: fixed spelling
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 28 May 2019 15:57:01 +0200
+
 ucs-school-umc-lists (2.0.0-2) unstable; urgency=medium
 
   * Bug #48504: Improve csv export compatibility by using UTF-16 and tabs
