--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.0-63) unstable; urgency=low
+
+  * Bug #49557: check if ucsschool.lib model classes changed
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 30 May 2019 08:59:59 +0200
+
 ucs-test-ucsschool (6.0.0-62) unstable; urgency=low
 
   * Bug #49556: make inherited errors more obvious
