--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.1) unstable; urgency=low
+
+  * Bug #43039: check computerroom._readRoomInfo verifies room DN
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 04 Jun 2019 09:51:55 +0200
+
 ucs-test-ucsschool (6.0.0-64) unstable; urgency=low
 
   * Bug #35447:
