--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.2) unstable; urgency=low
+
+  * Bug #35447: delete created objects
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 04 Jun 2019 12:13:12 +0200
+
 ucs-test-ucsschool (6.0.1) unstable; urgency=low
 
   * Bug #43039: check computerroom._readRoomInfo verifies room DN
