--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,11 @@
+ucs-test-ucsschool (6.0.5) unstable; urgency=low
+
+  * Bug #35447: make AutoMultiSchoolEnv a subclass of UCSTestSchool and thus
+    LDAPACLCheck a context manager
+  * Bug #35447: use logging instead of print, make ucr attribute public
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 05 Jun 2019 15:46:28 +0200
+
 ucs-test-ucsschool (6.0.4) unstable; urgency=low
 
   * Bug #43039: fix test
