--- a/ucs-school-umc-wizards/debian/changelog
+++ b/ucs-school-umc-wizards/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-wizards (11.0.0-6) unstable; urgency=low
+
+  * Bug #49608: fix mac_address and ip_address from string to list
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Mon, 07 Jun 2019 12:06:12 +0200
+
 ucs-school-umc-wizards (11.0.0-5) unstable; urgency=low
 
   * Bug #47222: allow usernames longer than 20 characters
