Bug #49609: Update byte compiled python files after upgrade from 4.3
Due to the same timestamp in 4.3 and 4.4 in the changelog for this
package, the byte compiled python files (*.pyc) were not updated by
pysupport. That resulted in multiple tracebacks due to python still
using the old byte compiled files, because the timestamp was the same
for python files from this package in 4.4 and 4.3.

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (17.0.6-21) unstable; urgency=medium
+
+  * Bug #49609: Version bump
+
+ -- Jürn Brodersen <brodersen@univention.de>  Fri, 07 Jun 2019 13:57:43 +0200
+
 ucs-school-import (17.0.6-20) unstable; urgency=low
 
   * Bug #48576: depend on same version of -common package
