--- a/ucs-school-umc-import/debian/changelog
+++ b/ucs-school-umc-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-import (2.0.0-2) unstable; urgency=medium
+
+  * Bug #49609: Version bump
+
+ -- Jürn Brodersen <brodersen@univention.de>  Fri, 07 Jun 2019 14:19:20 +0200
+
 ucs-school-umc-import (2.0.0-1) unstable; urgency=low
 
   * Bug #49217: depend on package containing constants.py
