--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.7) unstable; urgency=low
+
+  * Bug #35447: users cannot modify their own password via ldap.modify
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 12 Jun 2019 16:20:17 +0200
+
 ucs-test-ucsschool (6.0.6) unstable; urgency=low
 
   * Bug #35447: adapt to API change
