--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.8) unstable; urgency=low
+
+  * Bug #49608: Adapt tests to ip/mac address being lists
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Thu, 13 Jun 2019 09:29:55 +0200
+
 ucs-test-ucsschool (6.0.7) unstable; urgency=low
 
   * Bug #35447: users cannot modify their own password via ldap.modify
