--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (9.1.0-0) unstable; urgency=low
+
+  * Bug #48080: Respect teacher computers in exam sessions
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Fri, 14 Jun 2019 08:31:43 +0200
+
 ucs-school-umc-exam (9.0.1-6) unstable; urgency=low
 
   * Bug #49525: fix docstring
