--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.9) unstable; urgency=low
+
+  * Bug #48080: Add tests for teacher computers
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Fri, 14 Jun 2019 08:33:59 +0200
+
 ucs-test-ucsschool (6.0.8) unstable; urgency=low
 
   * Bug #49608: Adapt tests to ip/mac address being lists
