--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.13) unstable; urgency=medium
+
+  * Bug #47208: wait for drs for user remove 
+
+ -- Jürn Brodersen <brodersen@univention.de>  Tue, 18 Jun 2019 13:25:16 +0200
+
 ucs-test-ucsschool (6.0.12) unstable; urgency=low
 
   * Bug #49608: fix test not extracting mac/ip from list
