--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.17) unstable; urgency=low
+
+  * Bug #47978: fix selenium/01_password_reset
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 18 Jun 2019 14:39:15 +0200
+
 ucs-test-ucsschool (6.0.16) unstable; urgency=low
 
   * Bug #49556: adapt test
@@ -9,7 +15,6 @@ ucs-test-ucsschool (6.0.15) unstable; urgency=medium
   * Bug #35447: skip test until merge
 
  -- Jürn Brodersen <brodersen@univention.de>  Tue, 18 Jun 2019 14:14:51 +0200
-=======
 
 ucs-test-ucsschool (6.0.14) unstable; urgency=low
 
