--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (6.0.18) unstable; urgency=low
+
+  * Bug #35447: create admins from teachers to temporarily fix slave dc
+    replication test
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 18 Jun 2019 16:59:12 +0200
+
 ucs-test-ucsschool (6.0.17) unstable; urgency=low
 
   * Bug #47978: fix selenium/01_password_reset
