--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.20) unstable; urgency=low
+
+  * Bug #49680: set UMC connection language
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 19 Jun 2019 07:20:14 +0200
+
 ucs-test-ucsschool (6.0.19) unstable; urgency=medium
 
   * Bug #49680: add test 50_ucs-school-schoollists
