--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.21) unstable; urgency=low
+
+  * Bug #47978: fix selenium/02_internet_rules
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 19 Jun 2019 10:04:35 +0200
+
 ucs-test-ucsschool (6.0.20) unstable; urgency=low
 
   * Bug #49680: set UMC connection language
