--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.22) unstable; urgency=low
+
+  * Bug #48651: add retry_on_error to 80_move_users_into_another_ou
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 19 Jun 2019 13:06:07 +0200
+
 ucs-test-ucsschool (6.0.21) unstable; urgency=low
 
   * Bug #47978: fix selenium/02_internet_rules
