--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (9.0.1-8) unstable; urgency=low
+
+  * Bug #48080: Fix indentation error
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Fri, 21 Jun 2019 11:15:21 +0200
+
 ucs-school-umc-exam (9.0.1-7) unstable; urgency=low
 
   * Bug #48080: Respect teacher computers in exam sessions
