--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.26) unstable; urgency=low
+
+  * Bug #47978: fix selenium/*
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 26 Jun 2019 11:47:28 +0200
+
 ucs-test-ucsschool (6.0.25) unstable; urgency=low
 
   * Bug #35447: warn if district mode is enabled
