--- a/ucs-school-umc-exam/umc/python/schoolexam/de.po
+++ b/ucs-school-umc-exam/umc/python/schoolexam/de.po
@@ -2,8 +2,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ucs-school-umc-exam\n"
-"Report-Msgid-Bugs-To: packages@univention.de\n"
-"POT-Creation-Date: 2019-05-28 15:06+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2019-07-03 10:10+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -12,7 +12,27 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: umc/python/schoolexam/__init__.py:208
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:186
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:318
+#, python-format
+msgid "Could not authenticate user \"%s\"!"
+msgstr "Der Benutzer \"%s\" konnte nicht authentifiziert werden!"
+
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:191
+#, python-format
+msgid "The specified exam does not exist: %s"
+msgstr "Die spezifizierte Klassenarbeit existiert nicht: %s"
+
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:194
+msgid "The exam can only be modified by the owner himself."
+msgstr "Die Klassenarbeit kann nur von ihrem Eigentümer bearbeitet werden."
+
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:196
+msgid "The exam was already started and can not be modified anymore!"
+msgstr "Die Klassenarbeit wurde schon gestarted und kann nicht mehr bearbeitet werden!"
+
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:201
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:326
 #, python-format
 msgid ""
 "An exam with the name \"%s\" already exists. Please choose a different name "
@@ -21,76 +41,60 @@ msgstr ""
 "Eine Klassenarbeit unter dem Namen \"%s\" existiert bereits. Bitte wählen "
 "Sie einen anderen Namen."
 
-#: umc/python/schoolexam/__init__.py:537
-#, python-format
-msgid "An unexpected error occurred during the preparation: %s"
-msgstr "Ein unerwarteter Fehler trat währende der Vorbereitung auf: %s"
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:233
+msgid "Exam details are only visible to the exam owner himself."
+msgstr "Die Details einer Klassenarbeit können nur von ihrem Eigentümer eingesehen werden."
 
-#: umc/python/schoolexam/__init__.py:467
-msgid "Collecting exam files..."
-msgstr "Einsammeln der Klassenarbeitsdateien..."
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:305
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:574
+msgid "Initializing"
+msgstr "Einrichtung"
 
-#: umc/python/schoolexam/__init__.py:484
-msgid "Configuring the computer room..."
-msgstr "Einrichtung des Computerraumes..."
-
-#: umc/python/schoolexam/__init__.py:200
-#, python-format
-msgid "Could not authenticate user \"%s\"!"
-msgstr "Der Benutzer \"%s\" konnte nicht authentifiziert werden!"
-
-#: umc/python/schoolexam/__init__.py:363
-msgid "Could not connect to local UMC server."
-msgstr "Die Verbindung zum lokalen UMC-Server konnte nicht aufgebaut werden."
-
-#: umc/python/schoolexam/__init__.py:238 umc/python/schoolexam/__init__.py:479
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:356
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:597
 #, python-format
 msgid "Could not connect to master server %s."
 msgstr "Die Verbindung zum Master-Server %s konnte nicht aufgebaut werden."
 
-#: umc/python/schoolexam/__init__.py:350
-msgid "Distributing exam files"
-msgstr "Verteilung der Klassenarbeitsdateien"
-
-#: umc/python/schoolexam/__init__.py:607
-#, python-brace-format
-msgid "Error loading group DN {!r}."
-msgstr "Fehler beim Laden der Gruppen DN {!r}."
-
-#: umc/python/schoolexam/__init__.py:187 umc/python/schoolexam/__init__.py:456
-msgid "Initializing"
-msgstr "Einrichtung"
-
-#: umc/python/schoolexam/__init__.py:426
-msgid "No files have been distributed"
-msgstr "Keine Dateien wurden verteilt"
-
-#: umc/python/schoolexam/__init__.py:358
-msgid "Prepare room settings"
-msgstr "Vorbereiten der Raumeinstellungen"
-
-#: umc/python/schoolexam/__init__.py:267
-msgid "Preparing exam accounts"
-msgstr "Vorbereitung der Klassenarbeitskonten"
-
-#: umc/python/schoolexam/__init__.py:241
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:359
 msgid "Preparing the computer room for exam mode..."
 msgstr "Einrichtung des Computerraumes für den Klassenarbeitsmodus..."
 
-#: umc/python/schoolexam/__init__.py:297
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:385
+msgid "Preparing exam accounts"
+msgstr "Vorbereitung der Klassenarbeitskonten"
+
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:415
 msgid "Preparing user home directories"
 msgstr "Einrichten der Heimatverzeichnisse"
 
-#: umc/python/schoolexam/__init__.py:501
-msgid "Removing exam accounts"
-msgstr "Entfernen der Klassenarbeitskonten"
-
-#: umc/python/schoolexam/__init__.py:332
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:450
 msgid "Replication timeout: could not create all exam users"
 msgstr ""
 "Replikations-Timeout: Nicht alle Klassenarbeitskonten konnten erstellt werden"
 
-#: umc/python/schoolexam/__init__.py:441
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:468
+msgid "Distributing exam files"
+msgstr "Verteilung der Klassenarbeitsdateien"
+
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:476
+msgid "Prepare room settings"
+msgstr "Vorbereiten der Raumeinstellungen"
+
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:481
+msgid "Could not connect to local UMC server."
+msgstr "Die Verbindung zum lokalen UMC-Server konnte nicht aufgebaut werden."
+
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:511
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:647
+msgid "finished..."
+msgstr "beendet..."
+
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:544
+msgid "No files have been distributed"
+msgstr "Keine Dateien wurden verteilt"
+
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:559
 #, python-format
 msgid ""
 "Room \"%s\" does not contain any computers. Empty rooms may not be used to "
@@ -99,6 +103,23 @@ msgstr ""
 "Raum \"%s\" enthält keine Rechner. Klassenarbeiten können nicht in leeren "
 "Räumen gestartet werden."
 
-#: umc/python/schoolexam/__init__.py:393 umc/python/schoolexam/__init__.py:529
-msgid "finished..."
-msgstr "beendet..."
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:585
+msgid "Collecting exam files..."
+msgstr "Einsammeln der Klassenarbeitsdateien..."
+
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:602
+msgid "Configuring the computer room..."
+msgstr "Einrichtung des Computerraumes..."
+
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:619
+msgid "Removing exam accounts"
+msgstr "Entfernen der Klassenarbeitskonten"
+
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:655
+#, python-format
+msgid "An unexpected error occurred during the preparation: %s"
+msgstr "Ein unerwarteter Fehler trat währende der Vorbereitung auf: %s"
+
+#: ucs-school-umc-exam/umc/python/schoolexam/__init__.py:725
+msgid "Error loading group DN {!r}."
+msgstr "Fehler beim Laden der Gruppen DN {!r}."
