--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.28) unstable; urgency=medium
+
+  * Bug #49791: fix 17_http_proxy_auth_after_passwd_reset_check
+
+ -- Jürn Brodersen <brodersen@univention.de>  Thu, 04 Jul 2019 11:00:29 +0200
+
 ucs-test-ucsschool (6.0.27) unstable; urgency=medium
 
   * Bug #49415: fix 96_samba4_sid_allocation
