--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (6.0.29) unstable; urgency=low
+
+  * Bug #35447: fixed 23_password_reset
+  * Bug #35447: fixed 75_ldap_acls_specific_tests
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 04 Jul 2019 21:42:58 +0200
+
 ucs-test-ucsschool (6.0.28) unstable; urgency=medium
 
   * Bug #49791: fix 17_http_proxy_auth_after_passwd_reset_check
