--- a/ucs-school-ldap-acls-master/debian/changelog
+++ b/ucs-school-ldap-acls-master/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-ldap-acls-master (17.0.2-1) unstable; urgency=low
+
+  * Bug #35447: prevent school admins from changing other school admins passwords
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 04 Jul 2019 22:03:54 +0200
+
 ucs-school-ldap-acls-master (17.0.1-2) unstable; urgency=low
 
   * Bug #48080: OU-Admins are allowed to write ucsschoolRole on computer obj
