--- a/ucs-school-umc-distribution/debian/changelog
+++ b/ucs-school-umc-distribution/debian/changelog
@@ -1,14 +1,9 @@
-ucs-school-umc-distribution (17.0.1-6) unstable; urgency=low
-
-  * Bug #49744: Modify the query UMC call to be able to handle unstarted exams
-
- -- Ole Schwiegert <schwiegert@univention.de>  Fri, 28 Jun 2019 10:12:56 +0200
-
 ucs-school-umc-distribution (17.0.1-5) unstable; urgency=low
 
-  * Bug #49701: Add examStarted field to exams
+  * Bug #49637: Improve exam mode
+  * Bug #49701
 
- -- Ole Schwiegert <schwiegert@univention.de>  Fri, 21 Jun 2019 09:32:32 +0200
+ -- Ole Schwiegert <schwiegert@univention.de>  Mon, 15 Jul 2019 14:00:00 +0200
 
 ucs-school-umc-distribution (17.0.1-4) unstable; urgency=low
 
