--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-metapackage (12.0.2-3) unstable; urgency=low
+
+  * Bug #49515: store demo user password in ucsschool config dir
+  * improve password security, run update code only on update
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 16 Jul 2019 09:48:01 +0200
+
 ucs-school-metapackage (12.0.2-2) unstable; urgency=low
 
   * Bug #49475: do not perform package update but only a package list update
