--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,11 @@
+ucs-school-metapackage (12.0.2-4) unstable; urgency=low
+
+  * Bug #49531: set OC for demo_admin
+  * Bug #49531: style fixes
+  * Bug #49531: create separate staff and admin users, created admin from teacher
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 16 Jul 2019 10:33:28 +0200
+
 ucs-school-metapackage (12.0.2-3) unstable; urgency=low
 
   * Bug #49515: store demo user password in ucsschool config dir
