--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (9.0.1-10) unstable; urgency=low
+
+  * Bug #49859: Add UMC call to delete exams
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Wed, 17 Jul 2019 09:55:12 +0200
+
 ucs-school-umc-exam (9.0.1-9) unstable; urgency=low
 
   * Bug #49637: Improve exam mode
