--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.33) unstable; urgency=low
+
+  * Bug #49462: convert tests to pytest using parametrization
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 17 Jul 2019 15:12:35 +0200
+
 ucs-test-ucsschool (6.0.32) unstable; urgency=low
 
   * Bug #49462:
