--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (9.0.1-11) unstable; urgency=low
+
+  * Bug #49884: Add delete action to overview grid
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Mon, 22 Jul 2019 08:37:23 +0200
+
 ucs-school-umc-exam (9.0.1-10) unstable; urgency=low
 
   * Bug #49859: Add UMC call to delete exams
