--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.33) unstable; urgency=low
+
+  * Bug #49861: Test deletion of unstarted and started exams
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Mon, 22 Jul 2019 11:33:21 +0200
+
 ucs-test-ucsschool (6.0.32) unstable; urgency=low
 
   * Bug #49462:
