--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (9.0.1-12) unstable; urgency=medium
+
+   * Bug #49801: Fix problems with exam students
+
+ -- Jürn Brodersen <brodersen@univention.de>  Mon, 22 Jul 2019 16:18:42 +0200
+
 ucs-school-umc-exam (9.0.1-11) unstable; urgency=low
 
   * Bug #49884: Add delete action to overview grid
