--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (9.0.1-13) unstable; urgency=medium
+
+   * Bug #49859: Apply Juerns patch to improve code quality
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Wed, 24 Jul 2019 08:46:02 +0200
+
 ucs-school-umc-exam (9.0.1-12) unstable; urgency=medium
 
    * Bug #49801: Fix problems with exam students
