--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.35) unstable; urgency=low
+
+  * Bug #49907: Add selenium test to test ending of exams in computerroom module
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Thu, 25 Jul 2019 10:38:12 +0200
+
 ucs-test-ucsschool (6.0.34) unstable; urgency=low
 
   * Bug #49861: Test deletion of unstarted and started exams
