--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.36) unstable; urgency=low
+
+  * Bug #49907: Add selenium test to test ending of exams in computerroom module
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Thu, 12 Sep 2019 09:06:02 +0200
+
 ucs-test-ucsschool (6.0.48) unstable; urgency=low
 
   * Bug #50117: fix fix_ucsschool_slaves
@@ -63,7 +69,7 @@ ucs-test-ucsschool (6.0.39) unstable; urgency=low
 
 ucs-test-ucsschool (6.0.38) unstable; urgency=medium
 
-  * Bug #40367: Disable cache for 22_computerroom_module_settings 
+  * Bug #40367: Disable cache for 22_computerroom_module_settings
 
  -- Jürn Brodersen <brodersen@univention.de>  Sun, 11 Aug 2019 19:28:46 +0200
 
