--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-lib (12.1.3) unstable; urgency=low
+
+  * Bug #49938: fix removal of passwords from logging arguments if only one
+    format argument is passed
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 30 Jul 2019 13:36:21 +0200
+
 ucs-school-lib (12.1.2-1) unstable; urgency=low
 
   * Bug #49608: Fix modify for computer objects to retain multiple ip and mac
