--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.35) unstable; urgency=low
+
+  * Bug #49938: test removal of passwords when logging
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 30 Jul 2019 14:22:43 +0200
+
 ucs-test-ucsschool (6.0.34) unstable; urgency=low
 
   * Bug #49861: Test deletion of unstarted and started exams
