--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (12.1.4) unstable; urgency=low
+
+  * Bug #49938: remove password also from dict in record.msg 
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 30 Jul 2019 18:57:56 +0200
+
 ucs-school-lib (12.1.3) unstable; urgency=low
 
   * Bug #49938: fix removal of passwords from logging arguments if only one
