--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.36) unstable; urgency=low
+
+  * Bug #49938: test removal of passwords from record.msg
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 30 Jul 2019 18:57:24 +0200
+
 ucs-test-ucsschool (6.0.35) unstable; urgency=low
 
   * Bug #49938: test removal of passwords when logging
