--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.37) unstable; urgency=low
+
+  * Bug #49531: add unittest for create_demoportal
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 31 Jul 2019 10:48:54 +0200
+
 ucs-test-ucsschool (6.0.36) unstable; urgency=low
 
   * Bug #49938: test removal of passwords from record.msg
