--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (17.0.8) unstable; urgency=low
+
+  * Bug #49917: force redistribution of UDM hook
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 01 Aug 2019 12:56:08 +0200
+
 ucs-school-import (17.0.7) unstable; urgency=low
 
   * Bug #49917: prevent running the UcsschoolRoleComputers UDM hook on non
