Bug #50083: Use dedicated room reset method
Do not parse atjobs to reset a room. The default settings for a room are
known and a dedicated reset method could be implemented. This avoids
undesired code execution through atjobs.

--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-computerroom (10.0.2-6) unstable; urgency=medium
+
+  * Bug #50083: Improve room reset
+
+ -- Jürn Brodersen <brodersen@univention.de>  Mon, 09 Sep 2019 11:20:18 +0200
+
 ucs-school-umc-computerroom (10.0.2-5) unstable; urgency=medium
 
   * Bug #43080: Disable submit button if no room is selected (comment #12)
