Bug #40367: Use dedicated room reset method
Do not parse atjobs to reset a room. The default settings for a room are
known and a dedicated reset method could be implemented. This avoids
undesired code execution through atjobs.

--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-computerroom (11.0.0-4) unstable; urgency=medium
+
+  * Bug #40367: Improve room reset
+
+ -- Jürn Brodersen <brodersen@univention.de>  Mon, 05 Aug 2019 18:27:01 +0200
+
 ucs-school-umc-computerroom (11.0.0-3) unstable; urgency=low
 
   * Bug #43039: ensure room DN argument is valid
