--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.38) unstable; urgency=medium
+
+  * Bug #40367: Disable cache for 22_computerroom_module_settings 
+
+ -- Jürn Brodersen <brodersen@univention.de>  Sun, 11 Aug 2019 19:28:46 +0200
+
 ucs-test-ucsschool (6.0.37) unstable; urgency=low
 
   * Bug #49531: add unittest for create_demoportal
