--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.40) unstable; urgency=low
+
+  * Bug #49995: add user with two schools and school classes to test
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 12 Aug 2019 09:43:01 +0200
+
 ucs-test-ucsschool (6.0.39) unstable; urgency=low
 
   * Bug #49995: add test 207a_import-users_school_change_and_classes to
