--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-lib (12.1.5) unstable; urgency=low
+
+  * Bug #50066: adjust use of departmentNumber after making it a multi value
+    property in UCS 4.4 erratum 239 (Bug #49092)
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 27 Aug 2019 17:51:36 +0200
+
 ucs-school-lib (12.1.4) unstable; urgency=low
 
   * Bug #49938: remove password also from dict in record.msg 
