--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.42) unstable; urgency=low
+
+  * Bug #50087: add tests for HTTP API
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 03 Sep 2019 17:19:30 +0200
+
 ucs-test-ucsschool (6.0.41) unstable; urgency=low
 
   * Bug #50066: adjust test after change to departmentNumber in UCS 4.4
