--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.44) unstable; urgency=low
+
+  * Bug #49311: Test for SchoolComputer.lookup
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Wed, 04 Sep 2019 12:11:22 +0200
+
 ucs-test-ucsschool (6.0.43) unstable; urgency=low
 
   * Bug #49726: fix test
